--- a/VWEB/VWEB.csproj
+++ b/VWEB/VWEB.csproj
@@ -160,29 +160,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201904081727084_InitialCreate.cs" />
-    <Compile Include="Migrations\201904081727084_InitialCreate.Designer.cs">
-      <DependentUpon>201904081727084_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905200023109_InserindoTabelaAlunos.cs" />
-    <Compile Include="Migrations\201905200023109_InserindoTabelaAlunos.Designer.cs">
-      <DependentUpon>201905200023109_InserindoTabelaAlunos.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905200116440_AdicionandoControllerDePostagem.cs" />
-    <Compile Include="Migrations\201905200116440_AdicionandoControllerDePostagem.Designer.cs">
-      <DependentUpon>201905200116440_AdicionandoControllerDePostagem.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905210311462_001024052019.cs" />
-    <Compile Include="Migrations\201905210311462_001024052019.Designer.cs">
-      <DependentUpon>201905210311462_001024052019.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905210339473_003821052019.cs" />
-    <Compile Include="Migrations\201905210339473_003821052019.Designer.cs">
-      <DependentUpon>201905210339473_003821052019.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201905231810274_230520191509.cs" />
-    <Compile Include="Migrations\201905231810274_230520191509.Designer.cs">
-      <DependentUpon>201905231810274_230520191509.cs</DependentUpon>
+    <Compile Include="Migrations\201905250154325_240520192254.cs" />
+    <Compile Include="Migrations\201905250154325_240520192254.Designer.cs">
+      <DependentUpon>201905250154325_240520192254.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aluno.cs" />
@@ -199,6 +179,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\VWEBContext-20190408134751.mdf" />
+    <Content Include="App_Data\VWEBContext-20190408134751_log.ldf">
+      <DependentUpon>VWEBContext-20190408134751.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -320,36 +304,21 @@
     <Content Include="Views\Postagens\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201904081727084_InitialCreate.resx">
-      <DependentUpon>201904081727084_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905200023109_InserindoTabelaAlunos.resx">
-      <DependentUpon>201905200023109_InserindoTabelaAlunos.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905200116440_AdicionandoControllerDePostagem.resx">
-      <DependentUpon>201905200116440_AdicionandoControllerDePostagem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905210311462_001024052019.resx">
-      <DependentUpon>201905210311462_001024052019.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905210339473_003821052019.resx">
-      <DependentUpon>201905210339473_003821052019.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201905231810274_230520191509.resx">
-      <DependentUpon>201905231810274_230520191509.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905250154325_240520192254.resx">
+      <DependentUpon>201905250154325_240520192254.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
