--- a/VWEB/VWEB.csproj
+++ b/VWEB/VWEB.csproj
@@ -166,6 +166,10 @@
     <Compile Include="Migrations\201905250154325_240520192254.Designer.cs">
       <DependentUpon>201905250154325_240520192254.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906030153593_020620192253.cs" />
+    <Compile Include="Migrations\201906030153593_020620192253.Designer.cs">
+      <DependentUpon>201906030153593_020620192253.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aluno.cs" />
     <Compile Include="Models\Endereco.cs" />
@@ -200,6 +204,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\profile.jpg" />
     <Content Include="img\icon-passaro.png" />
     <Content Include="img\lightbox\default-skin.png" />
     <Content Include="img\lightbox\default-skin.svg" />
@@ -332,7 +337,6 @@
     <Content Include="Views\Mensagens\Details.cshtml" />
     <Content Include="Views\Mensagens\Edit.cshtml" />
     <Content Include="Views\Mensagens\Index.cshtml" />
-    <Content Include="Views\Mensagens\View.cshtml" />
     <Content Include="Views\Postagens\Create.cshtml" />
     <Content Include="Views\Postagens\Delete.cshtml" />
     <Content Include="Views\Postagens\Details.cshtml" />
@@ -356,6 +360,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201905250154325_240520192254.resx">
       <DependentUpon>201905250154325_240520192254.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906030153593_020620192253.resx">
+      <DependentUpon>201906030153593_020620192253.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
